<resources>
    <string name="app_name">TrackerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_helper">Todo Helper</string>
    <string name="todo_label">Todo Label</string>
    <string name="selected_date">Select A Date</string>
    <string name="selected_time">Time</string>
    <string name="snack_missing_date">No date or time is selected.</string>
    <string name="note_title">Note Title</string>
    <string name="note_desc">Note Description</string>
    <string name="todo_title">Todo Title</string>
    <string name="todo_desc">Todo Description</string>
    <string name="dismissDialog">Dismiss</string>
    <string name="addToDialog">Add</string>
    <string name="resetDialog">Reset</string>
    <string name="foodName">Enter food name</string>
    <string name="foodCal">Calories</string>
    <string name="submitDialog">Submit</string>
    <string name="cancelAdd">Cancel</string>
    <string name="submitAdd">Submit</string>
    <string name="setGoal">Set Calory Goal</string>
    <string name="openDialog">Open Calory List</string>
    <string name="calGoal">Current calory goal:</string>
    <string name="calChart">See calory chart for previous days</string>

</resources>