<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.sabanciuniv.todoapp.viewmodel.UseCaloryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_background_inset">

        <LinearLayout
            android:id="@+id/titleHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="28dp"
            android:paddingEnd="28dp">

            <View
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16pt"
                android:text="@{String.valueOf(viewmodel.personLiveData.title)}" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <FrameLayout
                android:id="@+id/prgBarHolder"
                android:layout_width="48dp"
                android:layout_height="48dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminateOnly="false"
                    android:progressDrawable="@drawable/circular_progressbar"
                    android:progress="@{viewmodel.personLiveData.percentage}" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{viewmodel.personLiveData.percentageText}" />

            </FrameLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@+id/titleHolder">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/colorControlActivated"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

        <LinearLayout
            android:id="@+id/buttonHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <Button
                android:id="@+id/dismissButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dismissDialog" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="8" />

            <Button
                android:id="@+id/resetButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetDialog" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/addButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addToDialog" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/additionalHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonHolder"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/newEntryHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonHolder"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/foodName_wrapper"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/foodName"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center_vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/food_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/foodCal_wrapper"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/foodCal"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center_vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cal_text"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/additionalButtonHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonHolder"
                android:orientation="horizontal"
                android:paddingStart="50dp"
                android:paddingEnd="50dp">

                <Button
                    android:id="@+id/cancelButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelAdd" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/submitButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submitAdd" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>